--- a/mangooa-project/mangooa-nacos/pom.xml
+++ b/mangooa-project/mangooa-nacos/pom.xml
@@ -2,14 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>mangooa-project</artifactId>
-		<groupId>com.mangooa</groupId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
 	<modelVersion>4.0.0</modelVersion>
-
+	<parent>
+		<groupId>com.mangooa</groupId>
+		<artifactId>mangooa-parent</artifactId>
+		<version>${revision}</version>
+		<relativePath>../mangooa-parent</relativePath>
+	</parent>
 	<artifactId>mangooa-nacos</artifactId>
-
-
+	<name>Mangooa Nacos</name>
+	<description>Mangooa Nacos</description>
+	<properties>
+		<main.basedir>${basedir}/../..</main.basedir>
+	</properties>
+	<scm>
+		<url>${git.url}</url>
+		<connection>${git.connection}</connection>
+		<developerConnection>${git.developerConnection}</developerConnection>
+	</scm>
 </project>
