--- a/mangooa-project/mangooa-dependencies/pom.xml
+++ b/mangooa-project/mangooa-dependencies/pom.xml
@@ -25,8 +25,8 @@
 	</scm>
 	<developers>
 		<developer>
-			<name>Weimin Gao</name>
-			<email>weimin.gao@aliyun.com</email>
+			<name>mangooa</name>
+			<email>mangooa@aliyun.com</email>
 			<organization>Mangooa Software, Inc.</organization>
 			<organizationUrl>https://www.mangooa.com</organizationUrl>
 		</developer>
