--- a/mangooa-project/pom.xml
+++ b/mangooa-project/pom.xml
@@ -17,10 +17,12 @@
 	<modules>
 		<module>mangooa-dependencies</module>
 		<module>mangooa-parent</module>
+		<module>mangooa-tools</module>
 		<module>mangooa-common</module>
 		<module>mangooa-nacos</module>
 		<module>mangooa-radius</module>
 		<module>mangooa-web</module>
+		<module>mangooa-app</module>
 		<module>mangooa-uaaa</module>
 	</modules>
 </project>
