项目初始化

--- a/mangooa-project/mangooa-dependencies/pom.xml
+++ b/mangooa-project/mangooa-dependencies/pom.xml
@@ -86,6 +86,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.mangooa</groupId>
+				<artifactId>mangooa-data-jpa</artifactId>
+				<version>${revision}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mangooa</groupId>
 				<artifactId>mangooa-radius</artifactId>
 				<version>${revision}</version>
 			</dependency>
