--- a/mangooa-project/pom.xml
+++ b/mangooa-project/pom.xml
@@ -19,6 +19,7 @@
 		<module>mangooa-parent</module>
 		<module>mangooa-tools</module>
 		<module>mangooa-common</module>
+		<module>mangooa-data-jpa</module>
 		<module>mangooa-nacos</module>
 		<module>mangooa-radius</module>
 		<module>mangooa-web</module>
