--- a/mangooa-project/mangooa-data-jpa/pom.xml
+++ b/mangooa-project/mangooa-data-jpa/pom.xml
@@ -9,9 +9,9 @@
 		<version>${revision}</version>
 		<relativePath>../mangooa-parent</relativePath>
 	</parent>
-	<artifactId>mangooa-common</artifactId>
-	<name>Mangooa Common</name>
-	<description>Mangooa Common</description>
+	<artifactId>mangooa-data-jpa</artifactId>
+	<name>Mangooa Data Jpa</name>
+	<description>Mangooa Data Jpa</description>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
 	</properties>
@@ -22,14 +22,12 @@
 	</scm>
 	<dependencies>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-common</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
