项目初始化

--- a/mangooa-project/pom.xml
+++ b/mangooa-project/pom.xml
@@ -24,5 +24,6 @@
 		<module>mangooa-web</module>
 		<module>mangooa-app</module>
 		<module>mangooa-uaaa</module>
-	</modules>
+        <module>mangooa-server</module>
+    </modules>
 </project>
