项目初始化

--- a/mangooa-project/mangooa-dependencies/pom.xml
+++ b/mangooa-project/mangooa-dependencies/pom.xml
@@ -81,6 +81,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.mangooa</groupId>
+				<artifactId>mangooa-test</artifactId>
+				<version>${revision}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mangooa</groupId>
 				<artifactId>mangooa-common</artifactId>
 				<version>${revision}</version>
 			</dependency>
