--- a/mangooa-project/mangooa-server/pom.xml
+++ b/mangooa-project/mangooa-server/pom.xml
@@ -23,7 +23,30 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-uaaa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mangooa</groupId>
 			<artifactId>mangooa-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
