--- a/mangooa-project/mangooa-dependencies/pom.xml
+++ b/mangooa-project/mangooa-dependencies/pom.xml
@@ -68,7 +68,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<!-- Mangooa -->
+			<!-- mangooa project-->
 			<dependency>
 				<groupId>com.mangooa</groupId>
 				<artifactId>mangooa-tools-core</artifactId>
@@ -106,6 +106,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.mangooa</groupId>
+				<artifactId>mangooa-rocketmq</artifactId>
+				<version>${revision}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mangooa</groupId>
 				<artifactId>mangooa-web</artifactId>
 				<version>${revision}</version>
 			</dependency>
@@ -116,7 +121,18 @@
 			</dependency>
 			<dependency>
 				<groupId>com.mangooa</groupId>
+				<artifactId>mangooa-webapp</artifactId>
+				<version>${revision}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mangooa</groupId>
 				<artifactId>mangooa-server</artifactId>
+				<version>${revision}</version>
+			</dependency>
+			<!-- mangooa apps -->
+			<dependency>
+				<groupId>com.mangooa</groupId>
+				<artifactId>mangooa-wlan</artifactId>
 				<version>${revision}</version>
 			</dependency>
 		</dependencies>
