--- a/mangooa-project/mangooa-tools/pom.xml
+++ b/mangooa-project/mangooa-tools/pom.xml
@@ -20,5 +20,6 @@
 	<modules>
 		<module>mangooa-tools-core</module>
 		<module>mangooa-tools-crypto</module>
-	</modules>
+        <module>mangooa-tools-mail</module>
+    </modules>
 </project>
