--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,8 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = space
+indent_style = tab
 indent_size = 4
 
-[*.{groovy, java, kt, xml}]
-indent_style = tab
+[*.{yml, ymal}]
+indent_size = 2
