--- a/mangooa-project/mangooa-common/pom.xml
+++ b/mangooa-project/mangooa-common/pom.xml
@@ -22,6 +22,10 @@
 	</scm>
 	<dependencies>
 		<dependency>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-tools-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<optional>true</optional>
