--- a/mangooa-project/mangooa-server/pom.xml
+++ b/mangooa-project/mangooa-server/pom.xml
@@ -39,7 +39,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.mangooa</groupId>
-			<artifactId>mangooa-web</artifactId>
+			<artifactId>mangooa-webapp</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
