--- a/mangooa-project/mangooa-webapp/pom.xml
+++ b/mangooa-project/mangooa-webapp/pom.xml
@@ -29,5 +29,9 @@
 			<groupId>com.mangooa</groupId>
 			<artifactId>mangooa-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 </project>
