--- a/mangooa-project/mangooa-server/pom.xml
+++ b/mangooa-project/mangooa-server/pom.xml
@@ -39,7 +39,19 @@
 		</dependency>
 		<dependency>
 			<groupId>com.mangooa</groupId>
-			<artifactId>mangooa-webapp</artifactId>
+			<artifactId>mangooa-app</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
