--- a/mangooa-project/mangooa-server/src/main/resources/application-dev.yml
+++ b/mangooa-project/mangooa-server/src/main/resources/application-dev.yml
@@ -1,4 +1,6 @@
 spring:
+  thymeleaf:
+    cache: false
   datasource:
     url: jdbc:h2:file:~/mangooa;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
     username: sa
