--- a/mangooa-project/mangooa-server/src/main/resources/application-test.yml
+++ b/mangooa-project/mangooa-server/src/main/resources/application-test.yml
@@ -1,4 +1,6 @@
 spring:
+  thymeleaf:
+    cache: false
   datasource:
     url: jdbc:mysql://localhost:3306/mangooa?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
