--- a/mangooa-project/mangooa-server/src/test/resources/application-junit.yml
+++ b/mangooa-project/mangooa-server/src/test/resources/application-junit.yml
@@ -1,13 +1,15 @@
 spring:
-    datasource:
-        url: jdbc:h2:mem:default;MODE=MYSQL
-        username: sa
-        password:
-        driver-class-name: org.h2.Driver
-    jpa:
-        database: h2
-        show-sql: true
-        generate-ddl: true
-        open-in-view: false
-        hibernate:
-            ddl-auto: create-drop
+  thymeleaf:
+    cache: false
+  datasource:
+    url: jdbc:h2:mem:default;MODE=MYSQL
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    database: h2
+    show-sql: true
+    generate-ddl: true
+    open-in-view: false
+    hibernate:
+      ddl-auto: create-drop
