--- a/mangooa-apps/pom.xml
+++ b/mangooa-apps/pom.xml
@@ -16,6 +16,7 @@
 		<main.basedir>${basedir}/..</main.basedir>
 	</properties>
 	<modules>
+		<module>mangooa-server</module>
 		<module>mangooa-wlan</module>
 	</modules>
 </project>
