--- a/mangooa-project/mangooa-dependencies/pom.xml
+++ b/mangooa-project/mangooa-dependencies/pom.xml
@@ -33,8 +33,8 @@
 	</developers>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
-		<hutool.version>5.5.6</hutool.version>
 		<spring-boot.version>2.4.1</spring-boot.version>
+		<spring-cloud.version>2020.0.0</spring-cloud.version>
 		<!-- Maven plugin-->
 		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -57,14 +57,16 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>cn.hutool</groupId>
-				<artifactId>hutool-all</artifactId>
-				<version>${hutool.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
 				<version>${spring-boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -97,11 +99,6 @@
 			<dependency>
 				<groupId>com.mangooa</groupId>
 				<artifactId>mangooa-radius</artifactId>
-				<version>${revision}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.mangooa</groupId>
-				<artifactId>mangooa-uaaa</artifactId>
 				<version>${revision}</version>
 			</dependency>
 			<dependency>
