--- a/mangooa-project/mangooa-tools/mangooa-tools-crypto/pom.xml
+++ b/mangooa-project/mangooa-tools/mangooa-tools-crypto/pom.xml
@@ -20,4 +20,10 @@
 		<connection>${git.connection}</connection>
 		<developerConnection>${git.developerConnection}</developerConnection>
 	</scm>
+	<dependencies>
+		<dependency>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-tools-core</artifactId>
+		</dependency>
+	</dependencies>
 </project>
