--- a/mangooa-tests/mangooa-uaa-test/pom.xml
+++ b/mangooa-tests/mangooa-uaa-test/pom.xml
@@ -7,11 +7,12 @@
 		<groupId>com.mangooa</groupId>
 		<artifactId>mangooa-parent</artifactId>
 		<version>${revision}</version>
-		<relativePath>../mangooa-parent</relativePath>
+		<relativePath>../../mangooa-project/mangooa-parent</relativePath>
 	</parent>
-	<artifactId>mangooa-common</artifactId>
-	<name>Mangooa Common</name>
-	<description>Mangooa Common</description>
+	<artifactId>mangooa-uaa-test</artifactId>
+	<packaging>war</packaging>
+	<name>Mangooa Uaa Test</name>
+	<description>Mangooa Uaa Test</description>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
 	</properties>
@@ -23,22 +24,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.mangooa</groupId>
-			<artifactId>mangooa-tools-core</artifactId>
+			<artifactId>mangooa-uaa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-			<optional>true</optional>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security.oauth.boot</groupId>
-			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
+
 </project>
