--- a/mangooa-tests/pom.xml
+++ b/mangooa-tests/pom.xml
@@ -3,7 +3,7 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+    <parent>
 		<groupId>com.mangooa</groupId>
 		<artifactId>mangooa-build</artifactId>
 		<version>${revision}</version>
@@ -15,4 +15,7 @@
 	<properties>
 		<main.basedir>${basedir}/..</main.basedir>
 	</properties>
+	<modules>
+		<module>mangooa-uaa-test</module>
+	</modules>
 </project>
