项目初始化

--- a/mangooa-project/mangooa-common/pom.xml
+++ b/mangooa-project/mangooa-common/pom.xml
@@ -26,6 +26,10 @@
 			<artifactId>mangooa-tools-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.mangooa</groupId>
+			<artifactId>mangooa-tools-crypto</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<optional>true</optional>
